--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <li><a href="#INTERNO" class="block hover:text-blue-600 hover:bg-gray-50 px-4 py-2 transition-colors">2.5. FODA Interno</a></li>
                         <li><a href="#externo" class="block hover:text-blue-600 hover:bg-gray-50 px-4 py-2 transition-colors">2.6. FODA Externo</a></li>
                         <li><a href="#CAME" class="block hover:text-blue-600 hover:bg-gray-50 px-4 py-2 transition-colors">2.7. Cruce FODA-CAME</a></li>
+                        <li><a href="#Mapa" class="block hover:text-blue-600 hover:bg-gray-50 px-4 py-2 transition-colors">2.8. Mapa Estrategico</a></li>
                     </ul>
                 </div>
     
@@ -1724,6 +1725,22 @@
                             </object>
                         </div>
                     </div>
+                                <section id="Mapa" class="py-12">
+                <div class="container mx-auto px-4 max-w-6xl">
+                    <div class="flex items-center mb-8">
+                        <div
+                            class="bg-blue-600 text-white rounded-full w-16 h-16 flex items-center justify-center shadow-lg mr-4">
+                            <i class="fas fa-chart-bar text-3xl"></i>
+                        </div>
+                        <h3 class="text-2xl font-bold text-blue-800">2.8. Mapa Estrategico</h3>
+                    </div>
+                        <div class="mb-2">
+                            <div class="w-full flex justify-center">
+                                <img src="Mapa Estrategico.png" alt="Mapa Estrategico.png" class="max-w-full h-auto rounded-xl shadow-lg">
+                            </div>
+                        </div>
+                </div>
+            </section>
                 </div>
             </section>
             <section id="Mapa" class="py-16">
@@ -1752,8 +1769,8 @@
                         <h3 class="text-2xl font-bold text-blue-800">3.1. Cuadro de mando Integral BSC</h3>
                     </div>
                         <div class="mb-6">
-                            <object data="BSC-CAJA-AREQUIPA.pdf" type="application/pdf" width="100%" height="500px">
-                                <p>No se puede visualizar el PDF. <a href="BSC-CAJA-AREQUIPA.pdf" target="_blank"
+                            <object data="BSC - Caja Arequipa.pdf" type="application/pdf" width="100%" height="500px">
+                                <p>No se puede visualizar el PDF. <a href="BSC - Caja Arequipa.pdf" target="_blank"
                                         class="text-blue-700 underline">Descargar PDF</a></p>
                             </object>
                         </div>
